kubernetes/helm-charts/kube-prometheus-stack/monitoring-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.servers.local`) || Host(`grafana.techbysean.com`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.servers.local`) || Host(`prometheus.techbysean.com`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`alertmanager.servers.local`) || Host(`alertmanager.techbysean.com`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
